cabal-version: 3.0
name:
  aklomp
version:
  0.1
synopsis:
  wrapper over aklomp base64 c library
-- description:
homepage:
  https://github.com/chessai/aklomp
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
-- copyright:
build-type:
  Simple
extra-doc-files:
  CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options:
    -Wall
  default-language:
    Haskell2010

library
  import:
    warnings
  exposed-modules:
    Aklomp
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >= 4.14 && < 4.20
  hs-source-dirs:
    src
  includes:
    libbase64.h
  extra-libraries:
    libbase64

test-suite aklomp-test
  import:
    warnings
  -- other-modules:
  -- other-extensions:
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    , base
    , aklomp
